--- a/index.html
+++ b/index.html
@@ -6,15 +6,9 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<h1>anythink</h1>
-		<h2>anythink</h2>
-		<h3>anythink</h3>
-		<h4>anythink</h4>
-		<h5>anythink</h5>
-		<h6>anythink</h6>
-		<p>assalamu alaikum ,hello there my name is munna,and i'm 24 years old,
-		i'm bangladesh,dhaka-sufia hospital's in here,my favorite is read quran 
-	    and making game,anime,3D model.</p>
+		<h1>assalamu alaikum </h1>
+		<h2>my name is munna</h2>
+		<p>my favorite is read quran</p>
 		<img src="images/pexels-gr-stocks-3272118.jpg" alt="pexels-gr-stocks-3272118">
 	</body>
 		
